--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "2",
+    "@koa/cors": "^2.2.2",
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "sequelize": "^5.19.5",
-    "sqlite3": "^4.1.0"
+    "sequelize": "^6.0.0",
+    "sqlite3": "^4.1.0",
+    "express": "^4.16.4"
   }
 }
